--- a/privacy.html
+++ b/privacy.html
@@ -6,5 +6,5 @@
 <p><strong>Last updated:</strong> <script>document.write(new Date().toISOString().slice(0,10))</script></p>
 <p>We only process the data required to link your financial accounts and display balances, holdings, and transactions to you.</p>
 <p>We do not sell your data. You can disconnect institutions at any time and request deletion of stored data.</p>
-<p>Contact: <a href="mailto:contact@example.com" style="color:#2ea4ff">contact@example.com</a></p>
+<p>Contact: <a href="DGuerin23@Gmail.com" style="color:#2ea4ff">contact@example.com</a></p>
 </body></html>
