--- a/terms.html
+++ b/terms.html
@@ -5,5 +5,5 @@
 <h1>Terms of Service</h1>
 <p><strong>Last updated:</strong> <script>document.write(new Date().toISOString().slice(0,10))</script></p>
 <p>By using Financial Command Center, you agree to these Terms. The service is provided "as is" without warranties.</p>
-<p>We are not liable for indirect, incidental, or consequential damages. Contact us with questions at <a href="mailto:contact@example.com" style="color:#2ea4ff">contact@example.com</a>.</p>
+<p>We are not liable for indirect, incidental, or consequential damages. Contact us with questions at <a href="DGuerin23@Gmail.com" style="color:#2ea4ff">contact@example.com</a>.</p>
 </body></html>
